first page done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kayes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/cd3a8de2fbdcc6349e775c49b3324172.png" type="image/x-icon">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="divwidth divwrite">
+            <h1 class="firsth1"> Welcome to </h1>
+            <h1> <span class="me">Emrul Kayes</span> Family </h1>
+            <b> Dedicated to do this </b>
+            <p class="about">Hey, this is my homepage, so I have to say something about myself. Sometimes it is hard to
+                introduce yourself because you know yourself so well that you do not know where to start with. Let me
+                give a
+                try to see what kind of image you have about me through my self-description. I hope that my impression
+                about
+                myself and your impression about me are not so different. Here it goes.</p>
+                <a href="https://github.com/its-kayes/" class="hire" target="_blank"><b>HIRE ME</b></a>
+        </div>
+        <div class="divwidth">
+            <img src="images/my-bg.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
