--- a/index.html
+++ b/index.html
@@ -26,12 +26,26 @@
                 try to see what kind of image you have about me through my self-description. I hope that my impression
                 about
                 myself and your impression about me are not so different. Here it goes.</p>
-                <a href="https://github.com/its-kayes/" class="hire" target="_blank"><b>HIRE ME</b></a>
+            <a href="https://github.com/its-kayes/" class="hire" target="_blank"><b>HIRE ME</b></a>
         </div>
         <div class="divwidth">
             <img src="images/my-bg.png" alt="">
         </div>
     </section>
+
+    <section>
+        <div class="downwidth">
+            <img src="images/kayes-bg2.png" alt="">
+        </div>
+        <div class="downwidth downwright">
+            <h1>Work Hard</h1>
+            <h3> Work hard untill you get your finish-line </h3>
+            <p>"A dream does not become reality through magic; it takes sweat, determination, and hard work." "I'm a great believer in luck, and I find the harder I work, the more I have of it." "Doing the best at this moment puts you in the best place for the next moment." "Hard work beats talent if talent doesn't work hard."</p>
+            <a href="https://linktr.ee/EmrulKayes" target="_blank" class="downlink"><b>Contact Me</b></a>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
