--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexball">
         <div class="divwidth divwrite">
             <h1 class="firsth1"> Welcome to </h1>
             <h1> <span class="me">Emrul Kayes</span> Family </h1>
@@ -33,15 +33,43 @@
         </div>
     </section>
 
-    <section>
+    <section class="flexball mid-banner">
         <div class="downwidth">
             <img src="images/kayes-bg2.png" alt="">
         </div>
         <div class="downwidth downwright">
             <h1>Work Hard</h1>
             <h3> Work hard untill you get your finish-line </h3>
-            <p>"A dream does not become reality through magic; it takes sweat, determination, and hard work." "I'm a great believer in luck, and I find the harder I work, the more I have of it." "Doing the best at this moment puts you in the best place for the next moment." "Hard work beats talent if talent doesn't work hard."</p>
+            <p>"A dream does not become reality through magic; it takes sweat, determination, and hard work." "I'm a
+                great believer in luck, and I find the harder I work, the more I have of it." "Doing the best at this
+                moment puts you in the best place for the next moment." "Hard work beats talent if talent doesn't work
+                hard."</p>
             <a href="https://linktr.ee/EmrulKayes" target="_blank" class="downlink"><b>Contact Me</b></a>
+        </div>
+    </section>
+
+    <section class="last-banner">
+        <div>
+            <h1 class="lasth1"> What did I done ?</h1>
+        </div>
+
+        <div class="flexball">
+            <div class="lastwidth">
+                <h3 class="me"> Project One </h3>
+                <p style="padding-left: 10px;">
+                    Every project is an opportunity to learn, to figure out problems and challenges, to invent and
+                    reinvent.
+
+                </p>
+            </div>
+
+            <div class="lastwidth">
+                <h3 class="me"> Final Project</h3>
+                <p style="padding-left: 10px;"> You have to think of a restaurant as a series of impressions. But what makes my job so great is
+                    there's no one answer that's right for every restaurant.
+                
+                </p>
+            </div>
         </div>
     </section>
 
